<resources>

<!--    default by android-->
    <string name="app_name">cobrosapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--  strings para la app  -->
    <string name="title_activity_busca__cliente">Busca Cliente</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Clientes</string>
    <string name="title_section2">Cuadres</string>
    <string name="title_section3">Section 3</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_busca_cliente">Busca_cliente</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_central">Central</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_operations">Operaciones</string>
    <string name="reimpimir_factura">Operacion Nula</string>
    <string name="Error_Operations_montoNuloEnPago">Sin monto a pagar</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_b_detallemensualidad">Detalle Mensualidad</string>
    <string name="title_activity_b_detallefactura">Detalle Factura</string>
    <string name="title_activity_b_mensualidad">DetalleFactura</string>
    <string name="title_activity_b_detallecaja">Detalle caja</string>
    <string name="title_activity_cobrador_cuadre">Cuadre Cobrador</string>

    <string name="show_text_textView_cobradorcuadre_fecha">Fecha:</string>
    <string name="show_text_editTextHint_cobradorcuadre_dia">DD</string>
    <string name="show_text_editTextHint_cobradorcuadre_mes">MM</string>
    <string name="show_text_editTextHint_cobradorcuadre_ano">AAAA</string>
    <string name="show_text_textView_divisionslash">/</string>
    <string name="show_text_textView_cobradorcuadre_textviewcobrador">-</string>
    <string name="show_text_textView_cobradorcuadre_textviewcantidad">-</string>
    <string name="show_text_textView_cobradorcuadre_textviewmonto">-</string>
    <string name="action_Imprime_Consulta_Cuadre_Cobrador_Resumida">Impresión Resumida</string>
    <string name="action_Imprime_Consulta_Cuadre_Cobrador_Detallada">Impresión Detallada</string>

    <string name="action_cuadre_cobrador">Cuadre Cobrador</string>

    <string name="action_main_activity_salirsistema">Desconectar Cobrador</string>

    <string-array name="bancos_array">
        <item>Banco Leon</item>
        <item>Banco De Reservas</item>
        <item>Banco Popular</item>
        <item>Banco BHD</item>
        <item>ScotiaBank</item>
        <item>Asociacion Cibao</item>
        <item>Republic Bank</item>
        <item>Asociacion Popular</item>
        <item>Banco Santa Cruz</item>
        <item>Banco del Progreso</item>
        <item>Asociacion Duarte</item>
        <item>Banco Caribe</item>
        <item>Asociacion La Vega Real</item>
        <item>Banco Ademi</item>
        <item>BancAmerica</item>
        <item>Alaver</item>
        <item>Banco Promerica</item>
        <item>Banco Provincial</item>
        <item>Banco BiverBanca</item>
    </string-array>

    <string-array name="tipo_pago">
        <item>Efectivo</item>
        <item>Tarjeta</item>
        <item>Cheque</item>
        <item>Cardnet</item>
    </string-array>

    <string-array name="bd_array">
        <item>Telenord</item>
        <item>Telecable Samana</item>
        <item>Telecable Sanchez</item>
        <item>Telecable Santo Domingo</item>
        <item>Viu</item>
    </string-array>

    <string-array name="tipo_tarjeta">
        <item>Debito</item>
        <item>Credito</item>
    </string-array>

    <string-array name="ciudad_array">
        <item>SAN FRANCISCO DE MACORIS</item>
        <item>LAS GUARANAS</item>
        <item>PIMENTEL</item>
        <item>SANTO DOMNGO</item>
        <item>SANTIAGO</item>
        <item>LA VEGA</item>
        <item>CASTILLO</item>
        <item>TENARES</item>
        <item>LA PEÑA</item>
        <item>VILLA RIVAS</item>
        <item>PUERTO PLATA</item>
        <item>SAMANA</item>
        <item>NAGUA</item>
        <item>SANCHEZ</item>
        <item>LAS TERRENAS</item>
        <item>MAO</item>
        <item>SALCEDO</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="pagos">Pago</string>
    <string name="pagos_caja">Otros Cargos</string>
    <string name="pagos_adelantado">Adelantado</string>
    <string name="pagos_reimprimir">Reimprimir</string>
    <string name="pagos_historial">Historial</string>

    <string name="operaciones_averias">Averias</string>
    <string name="operaciones_traslado">Traslados</string>
    <string name="operaciones_extension">Extensiones</string>
    <string name="operaciones_stb">Ops. STB</string>
    <string name="operaciones_internet">Internet</string>
    <string name="operaciones_reconexion">Reconexion</string>

    <!--PAGOS LAYOUT-->
    <string name="btn_procesar_pago">Aceptar</string>
    <string name="pagos_layout_mont">monto</string>
    <string name="pagos_layout_balance">Balance</string>
    <string name="pagos_layout_acuerdo">Acuerdo de Pago</string>
    <string name="pagos_layout_cuotas">Cuotas Vencidas</string>
    <string name="pagos_layout_tipo_pago">Tipo de Pago</string>
    <string name="pagos_layout_tipo_tarjeta">Tipo de Tarjeta</string>
    <string name="pagos_layout_banco">Banco</string>
    <string name="pagos_layout_tarjeta">Numero de Tarjeta</string>
    <string name="pagos_layout_boucher">Numero de Boucher</string>
    <string name="pagos_layout_cheque">Numero de Cheque</string>
    <string name="pagos_layout_cuenta">Numero de Cuenta</string>

    <!--LAYOUT DETALLES DE FACTURACION-->
    <string name="detalle_factura_numero">Numero</string>
    <string name="detalle_factura_factura">Factura</string>
    <string name="detalle_factura_fecha">Fecha</string>
    <string name="detalle_factura_fecha_vencimiento">Fecha Vencimiento</string>
    <string name="detalle_factura_concepto">Concepto</string>
    <string name="detalle_factura_pagado">Pagado</string>
    <string name="detalle_factura_balance">Balance</string>
    <string name="detalle_factura_general">Monto General</string>


    <!--LAYOUT DETALLES DE MOVIMIENTO-->
    <string name="movimiento_debito">Debito</string>
    <string name="movimiento_credito">Credito</string>
    <string name="movimiento_balance">Balance</string>
    <string name="movimiento_tipo">Tipo</string>
    <string name="movimiento_fecha">Fecha</string>
    <string name="movimiento_concepto">Concepto</string>


    <!--MENU DRAWER-->
    <string name="nav_clientes">Clientes</string>
    <string name="nav_cuadres">Cuadres</string>
    <string name="nav_ruta">Mi Ruta</string>
    <string name="nav_printer">Impresora</string>
    <string name="nav_salir">Cerrar Sesion</string>

    <!--LAYOUT CAMBIO DE STB-->
    <string name="cambio_stb_seleccionada">STB Seleccionadas:</string>
    <string name="cambio_stb_por">Cambiar Por:</string>
    <string name="cambio_stb_horario">Horario</string>
    <string name="cambio_stb_cant_disponible">Cantidad Disponible</string>
    <string name="cambio_stb_precio">Precio Por Cambio:</string>
    <string name="cambio_stb_total">Precio Total:</string>

    <!-- LAYOUT STB OPS-->
    <string name="stb_ops_lista">Lista de STB</string>
    <string name="stb_ops_add">Agregar STB</string>
    <string name="stb_ops_cambiar">Cambiar STB</string>
    <string name="stb_ops_add_des">Reactivar STB</string>





</resources>