<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cobros"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/nav_clientes" />
        <item
            android:id="@+id/nav_cuadre"
            android:icon="@drawable/ic_historial"
            android:title="@string/nav_cuadres" />
        <item
            android:id="@+id/nav_ruta"
            android:title="@string/nav_ruta"
            android:icon="@drawable/ic_ruta"/>
        <item
            android:id="@+id/nav_printer"
            android:title="@string/nav_printer"
            android:icon="@drawable/ic_print_white"/>

<!--        default -->
<!--        <item-->
<!--            android:id="@+id/nav_home"-->
<!--            android:icon="@drawable/ic_menu_camera"-->
<!--            android:title="@string/menu_home" />-->
<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu_gallery"-->
<!--            android:title="@string/menu_gallery" />-->
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->
    </group>
    <item android:title="Sesion">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_salir"
                    android:icon="@drawable/ic_power_settings_new_black_24dp"
                    android:title="@string/nav_salir" />

            </group>
        </menu>
    </item>
</menu>
